kodex-rs/tui/src/app/tests/snapshots/kodex_tui__app__tests__background_exit_tests__interrupted_disconnect_exit.snap
---
source: tui/src/app/tests/background_exit_tests.rs
expression: output
---
Disconnected from this task. The current turn was stopped.
To reconnect, run:
  kodex resume THREAD_ID
