kodex-rs/tui/src/app/tests/snapshots/kodex_tui__app__tests__background_exit_tests__remote_disconnect_exit.snap
---
source: tui/src/app/tests/background_exit_tests.rs
expression: "lines.join(\"\\n\")"
---
Disconnected from this task. Work may still be running.
To reconnect, run:
  kodex --remote wss://example.com:443/ resume 123e4567-e89b-12d3-a456-426614174000
Stop the current turn: run kodex --remote wss://example.com:443/ agents, select this task, and press x.
